RESOLVED FIXED29691
GraphicsContext::clipOut* functions do not behave as expected when no clipping is enabled before the call. Shadows render erroneously sometimes.
https://bugs.webkit.org/show_bug.cgi?id=29691
Summary GraphicsContext::clipOut* functions do not behave as expected when no clippin...
Carol Szabo
Reported 2009-09-23 13:35:24 PDT
The Qt implementation of the clipOut family of methods on GraphicsContext, instead of clipping out the intended area clip it in if clipping was not enabled prior to the call. This leads to shadows being rendered incorrectly in some QtWebKit based applications that use an unclipped painter when calling QWebFrame::paintContent.
Attachments
Proposed patch (3.74 KB, patch)
2009-09-23 15:52 PDT, Carol Szabo
no flags
Proposed Patch: Fixed a minor issue highlighted by Dirk (see comments). (3.84 KB, patch)
2009-09-25 09:19 PDT, Carol Szabo
no flags
Proposed Patch (3.84 KB, patch)
2009-10-02 08:26 PDT, Carol Szabo
no flags
Carol Szabo
Comment 1 2009-09-23 13:35:50 PDT
Patch comming later today.
Carol Szabo
Comment 2 2009-09-23 15:52:35 PDT
Created attachment 40024 [details] Proposed patch This patch handles the case when no clipping is set by the user of QtWebKit.
Dirk Schulze
Comment 3 2009-09-25 09:04:07 PDT
I'm not a reviewer but you forgot to delete QRectF clipBounds = p->clipPath().boundingRect(); in GC::clipOut(). I don't know what to do if p doesn't have clipping. Maybe torarne or ariya are the right person to review the patch.
Carol Szabo
Comment 4 2009-09-25 09:19:21 PDT
Created attachment 40113 [details] Proposed Patch: Fixed a minor issue highlighted by Dirk (see comments). Fixed a minor issue highlighted by Dirk (see comments).
Carol Szabo
Comment 5 2009-10-02 08:26:51 PDT
Created attachment 40516 [details] Proposed Patch Fixed style issue pointed out by Dirk
Dirk Schulze
Comment 6 2009-10-02 09:41:20 PDT
(In reply to comment #5) > Created an attachment (id=40516) [details] > Proposed Patch > > Fixed style issue pointed out by Dirk The code style as well as the fix itself look good to me. I would say r+, but I'm not a reviewer :-)
WebKit Commit Bot
Comment 7 2009-10-06 10:49:48 PDT
Comment on attachment 40516 [details] Proposed Patch Clearing flags on attachment: 40516 Committed r49195: <http://trac.webkit.org/changeset/49195>
WebKit Commit Bot
Comment 8 2009-10-06 10:49:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.